--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@
 
     /* Other */
     --header-height    : 56px;
+    --sidebar-width    : 240px;
     --z-tooltip        : 25;
     --z-fixed          : 100;
     --border-radius    : 2px;
@@ -192,4 +193,15 @@ img {
     opacity: 0;
     pointer-events: none;
     transition: opacity var(--transition-time);
+}
+
+/* --- Sidebar --- */
+.main-sidebar {
+    position: fixed;
+    top: var(--header-height);
+    height: calc(100vh - var(--header-height));
+    width: var(--sidebar-width);
+    padding: 0.75rem 0;
+    background-color: var(--bg-color);
+    overflow: auto;
 }
