--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@
  box-sizing: border-box;
 }
 
-/* --- Global variables --- */
+/** --- Global variables --- */
+
 :root {
     /* Base colors */
     --accent-color     : #FF0000;
@@ -46,6 +47,7 @@
 
 body {
     font-family: var(--body-font);
+    background-color: var(--bg-color-alt);
 }
 
 h1,
@@ -77,7 +79,8 @@ img {
     gap: 0.5rem;
 }
 
-/* --- Main header --- */
+/** --- Main header --- */
+
 .main-header {
     position: fixed;
     width: 100%;
@@ -88,6 +91,7 @@ img {
     align-items: center;
     padding: 0 1rem;
     height: var(--header-height);
+    background-color: var(--bg-color);
     z-index: var(--z-fixed);
 }
 
@@ -130,7 +134,7 @@ img {
     padding: 0 1rem;
 }
 
-/* --- User avatar --- */
+/* User avatar */
 .user-avatar {
     --size: 2rem;
     width: var(--size);
@@ -146,7 +150,7 @@ img {
     border-radius: 50%;
 }
 
-/* --- Action buttons --- */
+/* Action buttons */
 .action-button {
     --size: 2.5rem;
     width: var(--size);
@@ -168,7 +172,7 @@ img {
     border-color: var(--bg-color-active);
 }
 
-/* --- Tooltip --- */
+/* Tooltip  */
 [data-tooltip] {
     position: relative;
 }
@@ -195,8 +199,10 @@ img {
     transition: opacity var(--transition-time);
 }
 
-/* --- Sidebar --- */
+/** --- Sidebar --- */
+
 .main-sidebar {
+    --main-nav-padding: 0.5rem 1.5rem;
     position: fixed;
     top: var(--header-height);
     height: calc(100vh - var(--header-height));
@@ -204,4 +210,35 @@ img {
     padding: 0.75rem 0;
     background-color: var(--bg-color);
     overflow: auto;
+}
+
+/* Nav items */
+.main-sidebar .link {
+    display: flex;
+    align-items: center;
+    padding: var(--main-nav-padding);
+    color: var(--text-color);
+    font-size: var(--small-font-size);
+    text-decoration: none;
+
+}
+
+.main-nav .link.is-active,
+.main-nav .link:hover {
+    background-color: var(--bg-color-alt);
+}
+
+.main-nav .link.is-active {
+    font-weight: var(--font-bold);
+}
+
+/* Nav icons */
+.main-nav .link .icon {
+    margin-right: 1.5rem;
+    font-size: 1.5rem;
+    color: var(--text-color-alt);
+}
+
+.main-nav .link.is-active .icon {
+    color: var(--accent-color);
 }
