--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,14 @@ img {
     width: 100%;
 }
 
+hr {
+    --spacing: 0.75rem;
+    border: none;
+    border-bottom: 1px solid var(--border-color);
+    margin-bottom: var(--spacing);
+    padding-top: var(--spacing);
+}
+
 .place-center {
     display: flex;
     justify-content: center;
